--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -14,7 +14,7 @@
     <li>
       <a class="sidebar-list-a" href="./index.html">How it's made?</a>
     </li>
-    <li><a class="sidebar-list-a" href="./index.html">Our products</a></li>
+    <li><a  href="#q" class="sidebar-list-a">Our products</a></li>
     <li><a class="sidebar-list-a" href="./index.html">Contacts</a></li>
   </ul>
   <button class="menu-button" type="button">Buy now<span>></span></button>
