--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -188,11 +188,11 @@
   margin-left: 308px;
   padding-left: 0;
   margin-top: 0;
+  gap: 28px;
 }
 
 .menu-item {
   display: flex;
-  padding-right: 28px;
 }
 
 .menu-link {
