--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="products-background">
+<section id="q" class="products-background" >
   <div class="container">
     <p class="label">100% natural</p>
     <h2 class="title">products</h2>
