--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,7 +17,7 @@
     <li><a  href="#q" class="sidebar-list-a">Our products</a></li>
     <li><a class="sidebar-list-a" href="./index.html">Contacts</a></li>
   </ul>
-  <button class="menu-button" type="button">Buy now<span>></span></button>
+  <button class="menu-button js-open-modal" data-modal="modal-products-btn-open" type="button">Buy now ></button>
 </div>
 <header class="header">
   <div class="container container-header">
