--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -64,7 +64,7 @@
  z-index: 999;
 
  @media screen and (max-width:1199px) {
-   height: 90vh;
+   
     overflow-y: scroll;
    
  }
@@ -375,7 +375,7 @@ display: block;
 
    @media screen  and (max-width:1199px) {
       overflow-y: scroll;
-      height: 78vh;
+      height: 60vh;;
    }
 }
 
