--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,7 +1,7 @@
 <section class="hero-section">
   <div class="container container-hero">
     <div class="hero-passion">
-      <h1 class="text-h">ice cream made with passion</h1>
+      <h1 class="text-h animate__animated animate__heartBeat">ice cream made with passion</h1>
       <div class="passion-buttons">
         <button class="hero-button" type="button">Products</button>
         <a class="hero-link" type="button">How it’s made?</a>
@@ -44,7 +44,7 @@
         alt="plate of ice cream"
       /> -->
       <div class="description">
-        <p class="description-text">
+        <p class="description-text animate__animated animate__fadeInLeft">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et
         </p>
