--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -13,6 +13,7 @@ html {
   }
   
   :root {
+    --cubic-brauser: cubic-bezier(0.4, 0, 0.2, 1);
     --cards-cream:#AEC6A5;
     --cards-coffe:#EFD478;
     --text-color-data--Disabled: #ABABAB;
