--- a/src/partials/About.html
+++ b/src/partials/About.html
@@ -1,7 +1,7 @@
 <section class="section-about">
   <div class="container about-main">
-    <p class="about-title-label" id="about">tradition and love</p>
-    <h2 class="about-title">how it’s made?</h2>
+    <p class="about-title-label animate__animated animate__tada">tradition and love</p>
+    <h2 class="about-title animate__animated animate__fadeInUpBig">how it’s made?</h2>
 
     <div class="about-content">
       <div class="about-background-circle"></div>
