--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,7 +4,7 @@
       <p class="footer-page-titel titel-dubbed-first">
         homemade ice cream made
       </p>
-      <p class="footer-page-titel titel-dubbed-second">with passion</p>
+      <p class="footer-page-titel titel-dubbed-second animate__animated animate__bounceInUp">with passion</p>
     </div>
 
     <div class="footer-page-wrapper">
