--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,7 +1,7 @@
 <section id="q" class="products-background" >
   <div class="container">
     <p class="label">100% natural</p>
-    <h2 class="title">products</h2>
+    <h2 class="title animate__animated animate__flipInX">products</h2>
     <ul class="our-products list">
       <li class="product-card green">
         <h3 class="product-name product-name-green">ice cream</h3>
