--- a/src/partials/About.html
+++ b/src/partials/About.html
@@ -1,4 +1,4 @@
-<section class="section-about">
+<section class="section-about" id="How">
   <div class="container about-main">
     <p class="about-title-label animate__animated animate__tada">tradition and love</p>
     <h2 class="about-title animate__animated animate__fadeInUpBig">how it’s made?</h2>
