--- a/src/partials/Contacts.html
+++ b/src/partials/Contacts.html
@@ -1,5 +1,5 @@
 
-<section class="contacs">
+<section class="contacs" id="Contacts">
   <h1 class="visually-hidden">contacs</h1>
   <ul class="global-section-contacs">
     <li>
