--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,10 +12,10 @@
       <a class="sidebar-list-a current" href="./index.html">Home</a>
     </li>
     <li>
-      <a class="sidebar-list-a" href="./index.html">How it's made?</a>
+      <a class="sidebar-list-a" href="#How">How it's made?</a>
     </li>
-    <li><a  href="#q" class="sidebar-list-a">Our products</a></li>
-    <li><a class="sidebar-list-a" href="./index.html">Contacts</a></li>
+    <li><a  href="#products" class="sidebar-list-a">Our products</a></li>
+    <li><a class="sidebar-list-a" href="#Contacts">Contacts</a></li>
   </ul>
   <button class="menu-button js-open-modal" data-modal="modal-products-btn-open" type="button">Buy now ></button>
 </div>
@@ -29,12 +29,12 @@
       <ul class="hero-menu">
         <li class="menu-item"><a class="menu-link" href="">Home</a></li>
         <li class="menu-item">
-          <a class="menu-link" href="">How it's made?</a>
+          <a class="menu-link" href="#How">How it's made?</a>
         </li>
         <li class="menu-item">
-          <a class="menu-link" href="">Our products</a>
+          <a class="menu-link" href="#products">Our products</a>
         </li>
-        <li class="menu-item"><a class="menu-link" href="">Contacts</a></li>
+        <li class="menu-item"><a class="menu-link" href="#Contacts">Contacts</a></li>
       </ul>
     </nav>
     <button
