--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section id="q" class="products-background" >
+<section id="products" class="products-background" >
   <div class="container">
     <p class="label">100% natural</p>
     <h2 class="title animate__animated animate__flipInX">products</h2>
