--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -39,6 +39,8 @@
    padding: 0;
    cursor: pointer;
    background-color: transparent;
+
+   
    
 
 }
@@ -65,7 +67,10 @@
  z-index: 999;
  transition: opacity 250ms var(--cubic-brauser), visibility 250ms var(--cubic-brauser);
 
-
+@media screen  and (max-width:767px) {
+   height: 90vh;
+   overflow-y: scroll;
+}
 }
 
 
