--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,7 +3,7 @@
     <div class="hero-passion">
       <h1 class="text-h animate__animated animate__heartBeat">ice cream made with passion</h1>
       <div class="passion-buttons">
-        <button class="hero-button" type="button" href="#products">Products</button>
+        <button href="#products" class="hero-button" type="button" >Products</button>
         <a class="hero-link js-open-modal" type="button " data-modal="3">How it’s made?</a>
       </div>
     </div>
