--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,10 +1,12 @@
 <section class="hero-section">
   <div class="container container-hero">
     <div class="hero-passion">
-      <h1 class="text-h animate__animated animate__heartBeat">ice cream made with passion</h1>
+      <h1 class="text-h animate__animated animate__heartBeat">
+        ice cream made with passion
+      </h1>
       <div class="passion-buttons">
-        <button href="#products" class="hero-button" type="button" >Products</button>
-        <a class="hero-link js-open-modal" type="button " data-modal="3">How it’s made?</a>
+        <button class="hero-button" type="button">Products</button>
+        <a class="hero-link js-open-modal" data-modal="3">How it’s made?</a>
       </div>
     </div>
     <div class="hero-text">
