--- a/src/partials/Gallery.html
+++ b/src/partials/Gallery.html
@@ -16,7 +16,7 @@
                 <source media="(min-width: 320px)"
                   srcset="./images/slider.jpg 1x, ./images/slider@2x.jpg 2x">
 
-                  <img src="./images/slider.jpg"  />
+                  <img src="./images/slider.jpg" alt="Gallery" />
             </picture>
               
             </div>
@@ -32,7 +32,7 @@
                 <source media="(min-width: 320px)"
                   srcset="./images/slider-1.jpg 1x, ./images/slider-1@2x.jpg 2x">
 
-                <img src="./images/slider-1.jpg"  />
+                <img src="./images/slider-1.jpg" alt="Gallery" />
             </picture>
               
             </div>
@@ -48,7 +48,7 @@
                 <source media="(min-width: 320px)"
                   srcset="./images/slider-2.jpg 1x, ./images/slider-2@2x.jpg 2x">
 
-                <img src="./images/slider-2.jpg"  />
+                <img src="./images/slider-2.jpg" alt="Gallery" />
             </picture>
               
             </div>
@@ -80,7 +80,7 @@
                   <source media="(min-width: 320px)"
                     srcset="./images/woman-1.jpg 1x, ./images/woman-1@2x.jpg 2x">
   
-                    <img src="./images/woman-1.jpg" width="85" height="85"/>
+                    <img src="./images/woman-1.jpg" width="85" height="85" alt="woman"/>
               </picture>
                 
               </div>
@@ -101,7 +101,7 @@
                   <source media="(min-width: 320px)"
                     srcset="./images/review-1.jpg 1x, ./images/review-1@2x.jpg 2x">
   
-                  <img src="./images/review-1.jpg" width="85" height="85"/>
+                  <img src="./images/review-1.jpg" width="85" height="85" alt="review"/>
               </picture>
                 
               </div>
@@ -122,7 +122,7 @@
                   <source media="(min-width: 320px)"
                     srcset="./images/review-2.jpg 1x, ./images/review-2@2x.jpg 2x">
   
-                  <img src="./images/review-2.jpg" width="85" height="85"/>
+                  <img src="./images/review-2.jpg" width="85" height="85" alt="review"/>
               </picture>
                 
               </div>
